# SlipNet

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/app/slipnet/data/export/: ConfigExporter.kt  ConfigImporter.kt
app/src/main/java/app/slipnet/data/mapper/: ConnectionLogMapper.kt  ProfileMapper.kt
app/src/main/java/app/slipnet/data/native/: NativeBridge.kt  NativeConfig.kt
app/src/main/java/app/slipnet/di/: DatabaseModule.kt  RepositoryModule.kt
app/src/main/java/app/slipnet/presentation/: MainActivity.kt
app/src/main/java/app/slipnet/service/: BootReceiver.kt  NotificationHelper.kt  SlipNetVpnService.kt  VpnConnectionManager.kt
app/src/main/java/app/slipnet/tunnel/: DnsDoHProxy.kt  DnsttBridge.kt  DohBridge.kt  DomainRouter.kt  KotlinTunnelManager.kt  ProtocolSniffer.kt  SlipstreamBridge.kt  SlipstreamSocksBridge.kt  SshTunnelBridge.kt  TorSocksBridge.kt  TunInterface.kt  TunnelConnection.kt
app/src/main/res/drawable/: ic_vpn_key.xml
app/src/main/res/values/: strings.xml
app/src/main/rust/slipstream-rust/crates/slipstream-client/: Cargo.toml
app/src/main/rust/slipstream-rust/crates/slipstream-client/src/: android.rs  main.rs  runtime.rs  streams.rs
app/src/main/rust/slipstream-rust/crates/slipstream-client/src/dns/: debug.rs  response.rs
app/src/main/rust/slipstream-rust/crates/slipstream-client/src/runtime/: path.rs  setup.rs
app/src/main/rust/slipstream-rust/scripts/: build_picoquic.sh
(+38 files in other folders)
